# IPSuite

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  entrypoint.sh  index.rst  main.py  postBuild  pyproject.toml  pytest_log.txt  test_pack.py
.github/workflows/: build.yaml  doctest.yaml  lint.yaml  publish.yaml  pytest.yaml  tests.yaml
docs/: conf.py  index.rst  notes.txt  quickstart.rst
docs/source/: conf.py  glossary.rst  index.rst  nodes.rst  notes.md
docs/source/_examples/: 01_Data_Loading_and_Selection.nblink  01_relaxation.rst  02_Bootstrapping_Datasets.nblink  02_Training_Models.nblink  03_Analysing_Datasets_and_Model_Predictions.nblink  03_Labeling_with_Calculators.nblink  04_Data_Splitting_and_Configuration_Selection.nblink  04_Molecular_Dynamics_Structure_Generation_and_Simulation.nblink  05_Labeling_with_Calculators.nblink  05_Training_Models.nblink  06_Analysing_Datasets_and_Model_Predictions.nblink  06_Bootstrapping_Datasets.nblink  07_Molecular_Dynamics_Structure_Generation_and_Simulation.nblink  index.rst
docs/source/_get_started/: advanced_topics.rst  cheatsheet.rst  index.rst  installation.rst  ips.rst  nodes_list.rst  quickstart.rst  the_first_project.rst
docs/source/_nodes/: analysis.rst  bootstrap.rst  calculators.rst  configuration_comparison.rst  configuration_generation.rst  configuration_selection.rst  data_loading.rst  geometry.rst  ipsuite.analysis.model.rst  ipsuite.analysis.rst  ipsuite.base.rst  ipsuite.bootstrap.rst  ipsuite.calculators.rst  ipsuite.configuration_comparison.rst  ipsuite.configuration_generation.rst  ipsuite.configuration_selection.rst  ipsuite.data_loading.rst  ipsuite.fields.rst  ipsuite.geometry.rst  ipsuite.models.rst  ipsuite.project.rst  ipsuite.rst  ipsuite.static_data.rst  ipsuite.utils.rst  models.rst  modules.rst
docs/source/examples/: 01_Data_Loading_and_Selection.ipynb  02_Training_Models.ipynb  03_Analysing_Datasets_and_Model_Predictions.ipynb  04_Molecular_Dynamics_Structure_Generation_and_Simulation.ipynb  05_Labeling_with_Calculators.ipynb  06_Bootstrapping_Datasets.ipynb  07_metadyanmics_data_generating.ipynb
examples/: 01_Data_Loading_and_Selection.ipynb  02_Bootstrapping_Datasets.ipynb  02_Training_Models.ipynb  04_Data_Splitting_and_Configuration_Selection.ipynb  05_Labeling_with_Calculators.ipynb  05_Training_Models.ipynb  06_Analysing_Datasets_and_Model_Predictions.ipynb  06_Bootstrapping_Datasets.ipynb
ipsuite/: __init__.py  __init__.pyi  abc.py  conftest.py  interfaces.py  nodes.py  version.py
ipsuite/analysis/: __init__.py  bin_property.py  bond_stretch.py  ensemble.py  forces.py  md.py  model.py  model_dataset_analysis.py  molecules.py  sensitivity.py
ipsuite/analysis/model/: __init__.py  dynamics.py  dynamics_checks.py  math.py  misc.py  plots.py  predict.py  utils.py
ipsuite/atom_selection/: __init__.py  constraints.py  selections.py
ipsuite/base/: __init__.py  base.py  calculators.py  protocol.py
ipsuite/bootstrap/: __init__.py  random_displacements.py  rattle.py  surface_mods.py
ipsuite/calc/: __init__.py  apply.py  ase.py
ipsuite/calculators/: __init__.py  __init__.pyi  apax_jax_md.py  ase_cellopt.py  ase_geoopt.py  ase_md.py  ase_standard.py  cp2k.py  enhanced_sampling.py  gpaw.py  integrators.py  lammps.py  lj.py  mix.py  orca.py  plumed.py  torch_d3.py  workflow.py  xtb.py
ipsuite/configuration_comparison/: MMKernel.py  REMatch.py  __init__.py  __init__.pyi  base.py
ipsuite/configuration_generation/: __init__.py  __init__.pyi  gmx.py  packmol.py  smiles_to_atoms.py  surface_builder.py
ipsuite/configuration_modification/: __init__.py  __init__.pyi  mod_frames.py
ipsuite/configuration_selection/: __init__.py  base.py  filter.py  index.py  kernel.py  random.py  split.py  threshold.py  uniform_arange.py  uniform_energetic.py  uniform_temporal.py
ipsuite/data_loading/: __init__.py  add_data_ase.py  add_data_gromacs.py  add_data_h5md.py
ipsuite/datasets/: __init__.py  md22.py
ipsuite/dynamics/: __init__.py  checks.py  constraints.py  md.py  md_nodes.py  transformations.py
ipsuite/fields/: __init__.py  atoms.py  graph.py
ipsuite/geometry/: __init__.py  barycenter_coarse_grain.py  graphs.py  mapping.py  unwrap.py
ipsuite/models/: __init__.py  __init__.pyi  apax.py  base.py  cp2k.py  ensemble.py  gap.py  generic.py  mace.py  mace_model.py  nequip.py  orca.py  tblite.py  torch_d3.py  torchani.py  vasp.py
ipsuite/project/: __init__.py
ipsuite/static_data/: __init__.py  gap.jinja2  lammps_npt.jinja2  y_log.json
ipsuite/testing/: __init__.py  mapping.py
ipsuite/utils/: __init__.py  ase_sim.py  combine.py  docs.py  helpers.py  logs.py  md.py  metrics.py
old_docs/source/: index.rst
old_docs/source/_examples/: 02_Training_Models.nblink  03_Analysing_Datasets_and_Model_Predictions.nblink  05_Labeling_with_Calculators.nblink  index.rst
old_docs/source/_get_started/: index.rst
old_docs/source/_nodes/: analysis.rst  configuration_selection.rst  geometry.rst  index.rst  models.rst
tests/: conftest.py  test_atomsuite.py  test_ipsuite.py
tests/integration/: allegro_minimal.yaml  apax_minimal.yaml  apax_minimal2.yaml  skip_test_i_gap.py  test_AddData.py  test_apply_calculator.py  test_atom_selection_integration.py  test_configuration_selection.py  test_cp2k_model.py  test_ensemble.py  test_i_ConfigurationComparison.py  test_i_apax.py  test_i_bin_property.py  test_i_datasets.py  test_i_gap.py  test_i_geometry.py  test_i_model_analysis.py  test_i_nequip.py  test_list_flatten.py  test_smiles_to_atoms.py  test_surface_builder.py  test_torch_dftd.py  test_torch_dftd_consistency.py
tests/integration/calculators/: apax_md_minimal.yaml  apax_minimal.yaml  test_apax_jaxmd.py  test_ase_md.py  test_mix.py  test_torchd3.py  test_xtb.py
tests/integration/configuration_selection/: test_index.py
tests/integration/data/: cp2k.out
tests/unit_tests/: test_data_loading.py  test_metrics.py  test_utils_combine.py  test_utils_sim.py
tests/unit_tests/analysis/: test_u_model.py
tests/unit_tests/models/: test_gap.py
(+142 files in other folders)
