[project]
name = "ipsuite"
version = "0.2.6"
description = "A suite of tools for machine learned interatomic potentials."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["data-version-control", "machine-learning", "reproducibility", "interatomic potentials"]
dependencies = [
    "ase>=3.24.0",
    "cp2k-input-tools>=0.9.1",
    "laufband>=0.1.3",
    "lazy-loader>=0.4",
    "pint>=0.24",
    "rdkit2ase>=0.1.4",
    "seaborn>=0.13.2",
    "uncertainty-toolbox>=0.1.1",
    "znh5md>=0.4.4",
    "zntrack>=0.8.7",
]


authors = [
    { name = "Fabian Zills", email = "fzills@icp.uni-stuttgart.de" },
    { name = "Moritz René Schäfer", email = "schaefer@theochem.uni-stuttgart.de" },
    { name = "Nico Segreto", email = "segreto@theochem.uni-stuttgart.de" },
]
classifiers = ["License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)"]

[project.urls]
Repository = "https://github.com/zincware/ipsuite"
Releases = "https://github.com/zincware/ipsuite/releases"
Discord = "https://discord.gg/7ncfwhsnm4"
Documentation = "https://ipsuite.readthedocs.io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
docs = [
    "furo>=2024.8.6",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
]
gap = [
    "quippy-ase>=0.9.14",
    "xmltodict>=0.14.2",
]
dev = [
    "dvc-s3>=3.2.0",
    "ipykernel>=6.29.5",
    "mace-torch>=0.3.13",
    "mdanalysis>=2.8.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.ruff]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests",
]

# Same as Black.
line-length = 90


[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["A", "B", "C", "E", "F", "I", "C90", "C4", "TID", "PTH"] #  "D", "S"
# ignore = ["D203", "D213", "D104", "D102", "D100", ]
ignore = [
    "B905", # not supported in older python versions
]

[tool.codespell]
ignore-words-list = "dscribe"
skip = "poetry.lock,ipsuite/static_data/*,docs/source/examples/06_Bootstrapping_Datasets.ipynb"

[tool.uv.sources]
cp2k-output-tools = { git = "https://github.com/cp2k/cp2k-output-tools" }
cp2k-input-tools = { git = "https://github.com/cp2k/cp2k-input-tools" }
